--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,10 +1,11 @@
 * {
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
 }
 
 .home {
+    width: 100vw;
+    height: 100vh;
     background-color: #131619;
     padding: 15px;
     display: flex;
@@ -13,270 +14,99 @@
 }
 
 .home-container {
+    width: 76vw;
+    height: 97vh;
+    margin-left: 20px;
+}
+
+.community-board {
     display: flex;
-    width: 783px;
-    height: 100vh;
-    flex-direction: column;
-    margin-left: 176px;
-    margin-top: 68px;
+    align-items: flex-end;
+    gap: 12px;
+    align-self: stretch;
 }
 
-.MyIdea {
-    margin-bottom: 26px;
+.community-board > svg {
+    width: 33px;
+    height: 33px;
 }
 
-.MyIdea > p{
-    color: #F08080;
-    font-family: "Plus Jakarta Sans";
-    font-size: 30px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 24px;
-    padding: 10px;
-}
-
-.comment-form{
-    width: 100%;
-    height: 191px;
-    border-radius: 15px;
-    border: 1px solid var(--, #F08080);
-    box-shadow: 0px 4px 4px 0px #F08080;
-    box-sizing: border-box;
-    display: block;
+.community-board > div {
+    display: flex;
+    width: 524px;
+    padding: 24px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-bottom: 50px;
+    gap: 24px;
+    border-radius: 12px;
+    border-top: 1px solid var(--Glass-Stroke, rgba(255, 255, 255, 0.08));
+    background: #000;
 }
-.comment-form > input {
-    width: 95%;
-    box-sizing: border-box;
-    outline: none;
-    border: none;
-    background: transparent;
-    color: white;
-    padding-left: 10px; 
-    text-align: left;
-    margin-bottom: 130px;
-}
-.comment-form>div>button{
-    width: 52px;
-    color: #1A1D21;
+
+.community-board > div > div {
+    color: var(--Noble-Black-0, #FFF);
     text-align: center;
     font-family: "Plus Jakarta Sans";
-    font-size: 12px;
+    font-size: 16px;
     font-style: normal;
-    font-weight: 700;
+    font-weight: 600;
     line-height: 24px;
-    background-color: #F08080;
-    border-radius: 5px;
-    margin-right: 8px;
+    letter-spacing: 0.15px;
 }
-.comment-form>div{
-    width: 100%;
-    justify-content: end;
+
+.detail {
     display: flex;
-}
-
-
-.example {
-    display: flex;
-    height: 109px;
-    flex-direction: column;
-    align-self: stretch;
-    border-radius: 15px;
-    background: #1A1D21;
-    margin-bottom: 26px;
-}
-
-.example > div:nth-child(1) {
-    margin: 0px 15px    ;
-}
-
-.example > div:nth-child(1) > p{
-    padding: 10px;
-    color: #D9D9D9;
-    font-family: "Plus Jakarta Sans";
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 24px;
-}
-
-.example > div:nth-child(2) {
-    display: flex;
-    width: 800px;
     align-items: center;
-    margin: 5px 20px;
-}
-
-.example > div:nth-child(2) > div:nth-child(1), .example > div:nth-child(2) > div:nth-child(2), .example > div:nth-child(2) > div:nth-child(3) {
-    justify-content: center; 
-    display: flex;
-    width: 230px;
-    height: 35px;
-    justify-content: center;
-    align-items: center;
-    border-radius: 10px;
-    border: 1px solid #F08080;
-    background: #1A1D21;
-    margin: 5px;
-    color: white;
-}
-
-.example > div:nth-child(2) > div:nth-child(4){
-    display: flex;
-    width: 16px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-}
-
-.example > div:nth-child(2) > svg:nth-child(1) {
-    width: 12px;
-    height: 12px;
-    stroke-width: 2px;
-    stroke: var(--, #F08080);
-}
-
-.example > div:nth-child(2) > svg:nth-child(2) {
-    width: 16px;
-    height: 15.999px;
-    fill: var(--, #F08080);
-}
-
-.alarm {
-    display: flex;
-    height: 77px;
-    padding: 0px 21px;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 10px;
-    align-self: stretch;
-    border-radius: 15px;
-    background: linear-gradient(170deg, rgba(26, 29, 33, 0.00) 1.18%, rgba(239, 128, 128, 0.15) 93.12%);
-    margin-bottom: 26px;
-}
-
-.alarm > div {
-    display: flex;
-    align-items: flex-start;
     gap: 11px;
-    padding: 21px;
+    padding: 30px 0px;
 }
 
-.alarm > div > div:nth-child(1) {
+.detail > div {
     display: flex;
-    width: 51px;
-    height: 24px;
+    width: 111px;
+    padding: 4px 8px;
     justify-content: center;
     align-items: center;
-    gap: 10px;
-    border-radius: 5px;
-    border: 1px solid #F08080;
-    background: #F08080;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    gap: 8px;
+    border-radius: 4px;
+    border: 1px solid var(--Glass-Stroke, rgba(255, 255, 255, 0.08));
+    background: var(--Glass-Fill, linear-gradient(118deg, rgba(215, 237, 237, 0.16) -47.79%, rgba(204, 235, 235, 0.00) 100%));
+    box-shadow: 0px 1px 2px -1px rgba(0, 0, 0, 0.05), 0px 1px 3px 0px rgba(0, 0, 0, 0.05);
 }
 
-.alarm > div > div:nth-child(1) > p {
-    display: flex;
-    color: #1A1D21 !important;
-    font-family: "Plus Jakarta Sans";
-    font-size: 14px;
-    font-style: normal;
-    line-height: 24px;
-}
-
-.alarm > div > div:nth-child(1) > p{
-    color: #1A1D21;
-    font-family: "Plus Jakarta Sans";
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 24px; /* 171.429% */
-}
-
-.alarm > div > div > p:nth-child(1) {
-    align-self: stretch;
-    color: #FFF;
-    font-family: "Plus Jakarta Sans";
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 24px;
-}
-
-.alarm > div > div > p:nth-child(2) {
-    align-self: stretch;
-    color: #D9D9D9;
-    font-family: "Plus Jakarta Sans";
+.detail > div > p {
+    color: var(--Noble-Black-300, #9B9C9E);
+    text-align: center;
+    font-family: Inter;
     font-size: 12px;
     font-style: normal;
-    font-weight: 700;
-    line-height: 24px; /* 200% */
+    font-weight: 600;
+    line-height: 18px;
+    letter-spacing: 0.15px;
 }
 
-.recent {
-    display: flex;
+.option-card {
+    display: inline-flex;
+    width: 336px;
+    height: 162px;
     flex-direction: column;
-    align-items: flex-start;
-    gap: 7px;
-    align-self: stretch;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+    border-radius: 12px;
+    background: #000;
+    padding: 15px;
+    margin-right: 23px;
+    margin-bottom: 23px;
 }
-
-.recent > div:nth-child(1) {
+.option{
+    overflow-y: auto;
+    -ms-overflow-style: none; /* Internet Explorer 10+ */
+    scrollbar-width: none; /* Firefox */
+    width: 100%;
     display: flex;
     justify-content: center;
-    margin-bottom: 7px;
-}
-
-.recent > div:nth-child(1) > svg {
-    display: inline-flex;
-    width: 24px;
-    height: 24px;
-    margin-right: 4px;
-}
-
-.recent > div:nth-child(1) > p {
-    display: inline-flex;
-    color: #D9D9D9;
-    font-family: "Plus Jakarta Sans";
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 24px;
-}
-
-.recent > div:nth-child(2) {
-    display: inline-flex;
-    gap: 14px;
-}
-
-.recent > div:nth-child(2) > div {
-    display: inline;
-    width: 248px;
-    height: 148px;
-    border-radius: 10px;
-    border: 1px solid #F08080;
-    background: #131619;
-}
-
-.recent-content > div{
-    color: white;
-    border: 1px solid blue;
-    padding: 10px 20px;
-    
-}
-
-.recent-content > div > div:nth-child(1){
-    color: #F08080;
-    margin-bottom: 10px;
-    font-weight: 700;
-}
-
-.recent-content > div > div:nth-child(2) {
-    color: #D9D9D9;
-    font-weight: 500;
-    font-size: 13px;
+    flex-wrap: wrap;
+    height: calc(100% - 131px - 88px);
 }
