--- a/src/styles/slidebar.css
+++ b/src/styles/slidebar.css
@@ -1,5 +1,6 @@
 .slidebar-container{
     width: 300px;
+    height: 97vh;
     background-color: #0d0f10;
     border-radius: 20px;
     align-items: center;
@@ -15,6 +16,9 @@
     height: 60px;
     border-bottom: 1px solid #131619;
     padding: 24px;
+    /*  */
+
+
 }
 .slidebar-top-content>div>h3{
     color: white;
