fix: ItemNode text 색상 변경 (#fff)

--- a/src/styles/flownode.module.scss
+++ b/src/styles/flownode.module.scss
@@ -122,12 +122,12 @@
 
 
 .ItemText {
-  color: #CDCECF;
+  color: #ffffff;
   text-align: center;
   font-family: "Plus Jakarta Sans", sans-serif;
-  font-size: 12px;
+  font-size: 15px;
   font-style: normal;
-  font-weight: 700;
+  font-weight: 800;
   line-height: 24px; /* 200% */
   letter-spacing: 0.15px;
 }
