--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -9,16 +9,21 @@
     padding: 15px;
     display: flex;
     flex-direction: row;
-    box-sizing: border-box;
+    height: 100vh;
 }
 
 .home-container {
     display: flex;
-    width: 783px;
-    height: 100vh;
     flex-direction: column;
     margin-left: 176px;
     margin-top: 68px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 0;
+    justify-content: center;
+    align-items: center;
 }
 
 .MyIdea {
@@ -44,9 +49,8 @@
     box-sizing: border-box;
     display: block;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
     margin-bottom: 50px;
+
 }
 .comment-form > input {
     width: 95%;
@@ -55,9 +59,9 @@
     border: none;
     background: transparent;
     color: white;
-    padding-left: 10px; 
     text-align: left;
-    margin-bottom: 130px;
+    margin-bottom: 110px;
+    padding: 12px;
 }
 .comment-form>div>button{
     width: 52px;
@@ -70,12 +74,13 @@
     line-height: 24px;
     background-color: #F08080;
     border-radius: 5px;
-    margin-right: 8px;
+    border: none;
 }
 .comment-form>div{
     width: 100%;
     justify-content: end;
     display: flex;
+    padding: 12px
 }
 
 
@@ -103,15 +108,17 @@
     line-height: 24px;
 }
 
-.example > div:nth-child(2) {
+.example-item {
     display: flex;
     width: 800px;
     align-items: center;
     margin: 5px 20px;
+    justify-content: space-between;
 }
 
+
 .example > div:nth-child(2) > div:nth-child(1), .example > div:nth-child(2) > div:nth-child(2), .example > div:nth-child(2) > div:nth-child(3) {
-    justify-content: center; 
+    justify-content: center;
     display: flex;
     width: 230px;
     height: 35px;
@@ -223,6 +230,8 @@
     align-items: flex-start;
     gap: 7px;
     align-self: stretch;
+    max-width: 100%;
+    flex-wrap: wrap;
 }
 
 .recent > div:nth-child(1) {
@@ -262,11 +271,22 @@
     background: #131619;
 }
 
+.recent-content{
+    max-width: 100%;
+    flex-wrap: wrap;
+    justify-content: center;
+    height: 320px ;
+    overflow-y: auto;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    align-items: center;
+}
+
 .recent-content > div{
     color: white;
     border: 1px solid blue;
     padding: 10px 20px;
-    
+
 }
 
 .recent-content > div > div:nth-child(1){
@@ -279,4 +299,12 @@
     color: #D9D9D9;
     font-weight: 500;
     font-size: 13px;
+}
+.recomendList{
+    border-radius: 10px;
+    border: 1px solid #F08080;
+    background: #1A1D21;
+}
+.recomendListButton{
+    margin-left: 10px;
 }
