--- a/src/styles/flownode.module.scss
+++ b/src/styles/flownode.module.scss
@@ -29,12 +29,37 @@
 }
 
 .memoText {
+  display: flex;
   color: #000;
   font-family: "Plus Jakarta Sans", sans-serif;
   font-size: 12px;
   font-style: normal;
   font-weight: 500;
+  width: 100%;
+  height: 100%;
   line-height: 150%; /* 18px */
+}
+
+.memoText textarea {
+  all: unset;
+  border: none;
+  padding: 0;
+  margin: 0;
+  background: none;
+  box-shadow: none;
+  outline: none;
+  resize: none;
+  overflow-y: auto;
+  vertical-align: top;
+  font-size: x-small;
+
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+}
+
+.memoText textarea::placeholder {
+  color: #fff
 }
 
 .memoTextAuthor {
