--- a/src/styles/ideaboard.css
+++ b/src/styles/ideaboard.css
@@ -281,7 +281,7 @@
 .profile-modal-first-content>p{
     align-self: stretch;
     color: #9B9C9E;
-    font-family: "Plus Jakarta Sans";
+    font-family: "Plus Jakarta Sans", sans-serif;
     font-size: 16px;
     font-style: normal;
     font-weight: 500;
@@ -291,10 +291,11 @@
 .profile-modal-background{
     width: 100%;
     height: calc(100% - 80px);
+    transform: scale(0.8);
     position: absolute;
-    background: rgba(0, 0, 0, 0.50);
     top: 80px;
 }
+
 .profile-modal-second-content{
     display: flex;
     justify-content: space-between;
